--- a/src/app/core/components/menu-notifications/menu-notifications.component.scss
+++ b/src/app/core/components/menu-notifications/menu-notifications.component.scss
@@ -4,8 +4,6 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding: 2px 10px 7px 10px ;
-  overflow-y: scroll;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
